# Boostcamp-AI-Tech-Product-Serving

./: .all-contributorsrc  .gitignore  README.md  qna.md
.github/workflows/: build-push.yaml  deploy_docker.yml  deploy_ssh.yml  github-actions-demo.yml  python-app.yml
01-batch-serving(airflow)/: README.md  airflow.cfg  docker-compose.yml  docker-readme.md  requirements.txt
01-batch-serving(airflow)/dags/: 01-bash-operator.py  02-python-operator.py  03-python-operator-with-context.py  04-python-operator-with-jinja.py  05-python-operator-with-slack-noti.py  06-simple_elt.py  hello_world.py
01-batch-serving(airflow)/dags/utils/: slack_notifier.py
01-batch-serving(airflow)/data/: bike_data_20240101.csv  bike_data_20240102.csv  bike_data_20240103.csv  bike_data_20240104.csv  bike_schema.json
01-batch-serving(airflow)/operators/: slack_notifier.py
02-online-serving(fastapi)/examples/: 01_simple_webserver.py  02_path_parameter.py  03_query_parameter.py  04_optional_parameter.py  05_request_body.py  06_response_body.py  07_form.py  08_file.py  09_validation.py  10_config.py  11_event_handler.py  11_lifespan.py  12_api_router.py  13_exception_handling.py  14_background_tasks.py  README.md  log.txt  pyproject.toml
02-online-serving(fastapi)/projects/starter_code/: README.md  model.py  requirements.txt
02-online-serving(fastapi)/projects/web_single/: .gitignore  Dockerfile  README.md  api.py  config.py  database.py  dependencies.py  main.py  model.joblib  pyproject.toml  schemas.py
02-online-serving(fastapi)/projects/web_single/.venv2/: pyvenv.cfg
03-docker/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  futher-readings.md  main.py  pyproject.toml
03-docker/model_deploy/: requirements.txt
03-docker/model_deploy/.github/workflows/: build-push.yaml
03-docker/multi_stage_build/: Dockerfile.multi  Dockerfile.single  requirements.txt  simple_webserver.py
04-model-management(mlflow)/: .gitignore  docker-compose.yml  requirements.txt  search_run_and_download.py  search_run_example.py
04-model-management(mlflow)/logistic_regression/: MLProject  python_env.yaml
04-model-management(mlflow)/logistic_regression_with_autolog/: MLProject  train.py
04-model-management(mlflow)/logistic_regression_with_autolog_and_params/: MLProject  train.py
10-robust-testing(pytest)/: Dockerfile  pyproject.toml
10-robust-testing(pytest)/src/: api.py  database.py  main.py  model.py
10-robust-testing(pytest)/src/data/: __init__.py  text_dataloader.py
10-robust-testing(pytest)/src/models/: FFM_model.py  My_model.py  __init__.py
10-robust-testing(pytest)/tests/: test_api.py
15단계/: 백준_12865번.ipynb
assets/mask_task/: config.yaml
new/cv_serving/: README.md  api.py  config.py  dependencies.py  main.py  pyproject.toml
new/cv_serving/model/: README.md  best.pth  dataset.py  inference.py  loss.py  model.py  requirements.txt  sample_submission.csv  sample_submission.ipynb  train.py
new/model_deploy/: Dockerfile
new/nlp_serving/: .gitignore  api.py  config.py  dependencies.py  main.py  model.py  pyproject.toml
new/nlp_serving/data/: dev.csv  sample_submission.csv  test.csv  train.csv
new/nlp_serving/data/PaxHeader/: currentdir  sample_submission.csv
new/recsys_serving/: .dockerignore  README.md  api.py  config.py  main.py  model.py  pyproject.toml  trainer.py
new/recsys_serving/data/: context_dataloader.py  dl_dataloader.py  image_dataloader.py
new/recsys_serving/data/src/: users.csv
new/recsys_serving/data/src/submit/: sample_submission.csv
new/recsys_serving/models/: CNN_FM_model.py  DCN_model.py  DeepCoNN_model.py  FM_model.py  My_model.py  NCF_model.py  WDN_model.py
part2/01-voila/: .gitignore  README.md  baseline.ipynb  config.yaml  ipywidget-basic.ipynb  prototype.ipynb  requirements.txt  voila-basic.ipynb
part2/02-streamlit/: .gitignore  README.md  app-prac.py  app.py  app_test.py  config.yaml  confirm_button_hack.py  model.py  predict.py  requirements.txt  utils.py
part2/03-cloud/: README.md  cloud_storage_api.py  download.sh
part2/04-cicd/: Dockerfile  README.md  app.py  confirm_button_hack.py  copy_asset.sh  deploy_ssh.sh  model.py  predict.py  requirements.txt  utils.py
part3/01-fastapi/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
part3/01-fastapi/app/: README.md  __main__.py  confirm_button_hack.py  frontend.py  main.py  main_with_comments.py  model.py
part3/01-fastapi/assignments/: answer_app.py  app.py  app_test.py
part3/01-fastapi/deprecated/order/: README.md  requirements.txt
part3/01-fastapi/deprecated/order/app/: main.py  main_with_comments.py  model.py
part3/01-fastapi/deprecated/order/tests/e2e/: test_api.py
part3/01-fastapi/examples/: 01_simple_webserver.py  02_path_parameter.py  03_query_parameter.py  04_optional_parameter.py  05_request_body.py  06_response_body.py  07_form.py  08_file.py  09_validation.py  10_config.py  11_event_handler.py  12_api_router.py  13_exception_handling.py  14_background_tasks.py  15_test_client.py  async_sync_comparison.py  background_tasks.py  config.py  exception_handling.py  login_form.html  pyproject.toml  test_client.py  validation.py
part3/01-fastapi/sample/: app.py
part3/01-fastapi/tests/e2e/: test_api.py
part3/02-docker/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  trouble-shooting.md
part3/03-logging/: README.md  pyproject.toml
part3/03-logging/app/: README.md  config.yaml  logger.py
part3/03-logging/examples/: dynamic_logger.py  json_logging.py  logging_module.py
part3/04-mlflow/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  mlflow.db  requirements.txt
part4/01-bentoml/: README.md  pyproject.toml  requirements.txt
part4/01-bentoml/app/: README.md  config.yaml  confirm_button_hack.py  frontend.py  main.py
part4/01-bentoml/examples/: bento_packer.py  bento_service.py  requirements.txt
part4/02-airflow/: .gitignore  README.md  airflow.cfg  airflow.db  docker-compose.yml  docker-readme.md  requirements.txt
(+210 files in other folders)
