[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ahnsv <ahnsv@bc.edu>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
torch = "^1.9.1"
efficientnet-pytorch = "^0.7.1"
python-multipart = "^0.0.5"
albumentations = "^1.1.0"
torchvision = "^0.10.1"
requests = "^2.26.0"
gunicorn = "^20.1.0"
streamlit = "^1.2.0"
opencv-python-headless = "4.5.1.48"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
