[tool.poetry]
name = "01-bentoml"
version = "0.1.0"
description = ""
authors = ["ahnsv <ahnsv@bc.edu>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<3.10"
BentoML = "^0.13.1"
Pillow = "^8.4.0"
albumentations = "^1.1.0"
torch = "^1.10.0"
torchvision = "^0.11.1"
efficientnet-pytorch = "^0.7.1"
imageio = "^2.10.3"
streamlit = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
